glibc (2.3.6-4) UNRELEASED; urgency=low

  * Set configure_build to the same value as configure_host for sparc
    optimized libraries (as on i386). This way they will be tested.
  * If the CPU has biarch support, run tests for cross-compiled libraries.

 -- Aurelien Jarno <aurel32@debian.org>  Thu,  2 Mar 2006 05:10:12 +0100

glibc (2.3.6-3) unstable; urgency=low

  [ Aurelien Jarno]
  * Use a shell function instead of ifneq when testing a variable depending on
    $(curpass), otherwise it is only evaluated at the first pass.
  * Add support for the ppc64 architecture.  (Closes: #301438).
  * Use the new slibdir, libdir, rtlddir variables to build the various
    flavours of the libc. Put them directly in the final directory, and
    remove the corresponding tweaks done after the make install phase.
  * Install the 32-bit libraries in /emul/ia32-linux(/usr)/lib on amd64.
  * Only create the multiarch directories and the symlinks in /lib/ldconfig
    for the main pass. Otherwise alternate libraries would conflict with the
    main one when using multiarch.
  * Fix the build-dependencies for kfreebsd-amd64.
  * Add sysdeps/kfreebsd-amd64.mk and add kfreebsd-amd64 to
    rules.d/control.mk.
  * Make libc6-i386-dev conflicts with all versions of ia32-libs-dev. As it
    won't be built anymore on amd64, this will automatically remove it during
    the upgrade.

  [ Clint Adams ]
  * Get rid of -o as a binary operator to [ in tzconfig and postinst.

  [ Denis Barbier ]
  * Update localedata/locales/ro_RO.  Thanks Eddy Petrişor.  (Closes: #347173)
  * Bump LOCALES_DEP_VER to 2.3.6-2.  All locales can be compiled with
    localedef from 2.3.6-2 and 2.3.6-3.  (Closes: #352620)
  * Updated Italian debconf translation, by Luca Monducci.

 -- Aurelien Jarno <aurel32@debian.org>  Wed,  1 Mar 2006 17:11:36 +0100

glibc (2.3.6-2) unstable; urgency=low

   [ Denis Barbier ]
   * Modify debver2localesdep.pl, locales-depver and control files to provide