@@ -3,7 +3,8 @@ glibc (2.3.6-4) UNRELEASED; urgency=low
   * Set configure_build to the same value as configure_host for sparc
     optimized libraries (as on i386). This way they will be tested.
   * If the CPU has biarch support, run tests for cross-compiled libraries.
-
+  * Remove ld.so from optimized libraries as it is not used.
+  
  -- Aurelien Jarno <aurel32@debian.org>  Thu,  2 Mar 2006 05:10:12 +0100
 
 glibc (2.3.6-3) unstable; urgency=low
